--- a/KnowledgeBase/Day Planners/2022-03-08.md
+++ b/KnowledgeBase/Day Planners/2022-03-08.md
@@ -6,7 +6,7 @@ Project Update
 Growth target doubled to allow for a Business Case to even be approved. 
 
 
-[Sub Project 4](Sub Project 4): [Piermichele Murgia](Piermichele Murgia)
+[Sub Project 4](Sub Project 4): [Piermichele Murgia]([[Piermichele Murgia]])
 #[Scenario1](Sub Project 4) Review layout for 21 MEur
 
 #[Scenario2 ](Sub Project 4)Expand current Airasca
@@ -18,14 +18,14 @@ Growth target doubled to allow for a Business Case to even be approved.
 
 #[Sub-Project3](Sub Project 3): [Planning  & Systems](Connectivity)
 	Slow progress
-	MES
+	[[MES]]
 
-#[Sub-Project1](World Class Channel 1,World Class Channel 2): #Pompeo
+#[Sub-Project1]([[World Class Channel 1]],[[World Class Channel 2]]): #[Pompeo](Pompeo Circello)
 	#Simulation #Damien #Plantsim to be completed end of month ([[2022-03-08]])
 
-#[GrindingArea](World Class Channel 1) #[[[Automation]]](Hugo Danielson):
+#[GrindingArea]([[World Class Channel 1]]) [Automation]([[Hugo Danielson]]):
 	#Tecnosystem  or #Melchiore will meet to discuss
-	#[Tecnosystem](Automation) lacking in software skills
+	#[Tecnosystem](Automation.md) lacking in software skills
 
 #Co-design #SetCreation #Oasys [[2022-03-19]]
 
